--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quanfuxia888/protocol",
+  "name": "quanfuxia/protocol",
   "version": "1.0.0",
   "description": "协议验证基础抽象类",
   "authors": [
